// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TagCount component should render a disabled tag count with count 0 1`] = `
<Button
  className="ins-c-tag-count"
  isDisabled={true}
  onClick={[Function]}
  variant="plain"
>
  <Icon
    size="md"
  >
    <TagIcon />
  </Icon>
  <span
    className="ins-c-tag__text"
  />
</Button>
`;

exports[`TagCount component should render a tag count of 11 1`] = `
<Button
  className="ins-c-tag-count"
  isDisabled={false}
  onClick={[Function]}
  variant="plain"
>
  <Icon
    size="md"
  >
    <TagIcon />
  </Icon>
  <span
    className="ins-c-tag__text"
  >
    11
  </span>
</Button>
`;

exports[`TagCount component should render a tag count with no value 1`] = `
<Button
  className="ins-c-tag-count"
  isDisabled={true}
  onClick={[Function]}
  variant="plain"
>
  <Icon
    size="md"
  >
    <TagIcon />
  </Icon>
  <span
    className="ins-c-tag__text"
  />
</Button>
`;
